--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
 }
 
 h2 {
-    color: yellow;
-    border: 1px red solid;
+    color: deeppink;
+    border: 1px solid green;
+    padding: 10px;
+}
+
+#ps {
+    padding: 40px;
+    margin-bottom: 10px;
 }
